# calibration-tool

./: .gitignore  CLAUDE.md  README.md  app.py  auth.py  pyproject.toml  requirements.txt  run_codex_review.py  run_e2e.py  validate_e2e.py
.claude/: settings.json
.claude/commands/: calibrate-smoke.md
.streamlit/: config.toml
calibration/plugins/: openai_codex.py
calibration/portfolio/: models.py  optimizer.py
calibration/project/: models.py  simulation.py
calibration/utils/: irr.py  loaders.py  stats.py
calibration/vehicle/: calibration.py  capital_stack.py  models.py  risk_mitigants.py
docs/: AUTH_MANUAL_TEST_PLAN.md
examples/: cashflow_vehicle.csv  portfolio.json  projects_vehicle_1.csv  projects_vehicle_2.csv
examples/folder/v1_east_africa_solar/: price_carbon_credits.csv  project_solar_ethiopia.csv  project_solar_kenya.csv  project_solar_tanzania.csv  solar_ethiopia.csv  solar_kenya.csv  solar_tanzania.csv
examples/folder/v2_west_africa_agri/: agroforestry_ghana.csv  cashcrop_nigeria.csv  forestry_senegal.csv  project_agroforestry_ghana.csv  project_cashcrop_nigeria.csv  project_forestry_senegal.csv
examples/folder/v3_sea_water/: project_water_indonesia.csv  project_water_philippines.csv  project_water_vietnam.csv  water_indonesia.csv  water_philippines.csv  water_vietnam.csv
examples/mock_portfolio/vehicle_1_forestry/: forestry_arr.csv  forestry_conservative.csv  forestry_risky.csv
tests/: test_auth.py  test_codex_plugin.py  test_e2e.py  test_irr.py  test_portfolio.py  test_project.py  test_vehicle.py
(+15 files in other folders)
