[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calibration-tool"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "numpy-financial>=1.0",
    "cvxpy>=1.4",
    "pydantic>=2.5",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]
ui = ["streamlit>=1.32", "plotly>=5.18"]
codex = ["openai>=1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
